# the-pattern

./: CLAUDE.md  GHOSTWHEEL_REFERENCE.md  GTD_PARA_ANALYSIS.md
.claude/: settings.json
app/: package-lock.json  package.json  pnpm-lock.yaml
app/src/: app.html
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  the-pattern.entitlements
app/src-tauri/capabilities/: capture.json  default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/lib/: artifacts.ts  claude.ts  issues.ts  jiraLink.ts  logrus.ts  openLoops.ts  search.ts  shadows.ts  vault.ts  voice.svelte.ts
app/src/lib/components/: CommitmentList.svelte  ContextMenu.svelte  Editor.svelte  InscriptionsList.svelte  JiraText.svelte  MessageBubble.svelte  NavBar.svelte  NotesList.svelte  OberonChat.svelte  OberonPanel.svelte  ResizeHandle.svelte  SettingsDialog.svelte  Sidebar.svelte  SidebarPanelNav.svelte  SidebarSections.svelte  SidebarTree.svelte
app/src/lib/editor/: block-actions.ts  slash-commands.ts
app/src/lib/stores/: artifacts.svelte.ts  braindump.svelte.ts  chronicles.svelte.ts  commitments.svelte.ts  conversation.svelte.ts  focus.svelte.ts  issues.svelte.ts  journal.svelte.ts  layout.svelte.ts  logrus.svelte.ts  nav-history.svelte.ts  sessions.svelte.ts  settings.svelte.ts  shadows.svelte.ts  sparks.svelte.ts  top3.svelte.ts  vault.svelte.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/artifacts/: +page.svelte
app/src/routes/brain-dump/: +page.svelte
app/src/routes/capture/: +layout@.svelte  +page.svelte
(+32 files in other folders)
